@@ -56,6 +56,9 @@
     <Compile Include="Language\ClonedObject.cs" />
     <Compile Include="Methods\Comparison\NotEqualsNativeMethod.cs" />
     <Compile Include="Methods\Comparison\NotEqualsMethod.cs" />
+    <Compile Include="Methods\Block.cs" />
+    <Compile Include="Methods\BlockMethod.cs" />
+    <Compile Include="Methods\ForEachMethod.cs" />
     <Compile Include="Methods\ListMethod.cs" />
     <Compile Include="Methods\FunctionMethod.cs" />
     <Compile Include="Language\ListObject.cs" />
